# aoc_2024

./: README.md  main.py  pyproject.toml
advent of code 2024/: main.py
advent of code 2024/solution_01/: data_loader.py  solution.py
advent of code 2024/utils/: data_loader.py  solution.py
advent_of_code_2024/solution_01/: __init__.py  data_loader.py  solution.py
advent_of_code_2024/solution_02/: data_loader.py  solution.py
advent_of_code_2024/solution_03/: data_loader.py  solution.py
advent_of_code_2024/solution_04/: __init__.py  data_loader.py  solution.py
advent_of_code_2024/solution_06/: data_loader.py  solution.py
advent_of_code_2024/utils/: __init__.py  data_loader.py  solution.py
tests/: test_solution_01.py  test_solution_02.py  test_solution_03.py  test_solution_04.py  test_solution_06.py
