[tool.poetry]
name = "advent of code 2024"
version = "0.1.0"
description = "advent of code 2024 solutions"
authors = ["Lawrence Borst"]
license = "MIT"
readme = "README.md"
packages = [
    { include = "advent_of_code_2024" }
]


[tool.poetry.scripts]
main = "main:main"


[tool.poetry.dependencies]
python = "^3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
